kubernetes/apps/retro/romm/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: romm-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: romm
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/component: database
              app.kubernetes.io/instance: retro-db
      - toFQDNs:
          - matchName: hasheous.org
          - matchName: howlongtobeat.com
          - matchName: id.twitch.tv
          - matchName: playmatch.retrorealm.dev
          - matchName: raw.githubusercontent.com
          - matchName: steamgriddb.com
          - matchPattern: "*.steamgriddb.com"
          - matchPattern: "*.screenscraper.fr"
          - matchPattern: "*.igdb.com"
        toPorts:
          - ports:
              - port: "443"
